# game-of-life

./: .gitignore  README.md  main.py  pyproject.toml
game_of_life/: board.py  board_factory.py  cell.py  game.py  life_rules.py  position.py
tests/: test_board.py  test_life_rules.py
