[tool.poetry]
name = "game-of-life"
version = "0.1.0"
description = ""
authors = ["luru <luisruizpavon@gmail.com>"]
readme = "README.md"
packages = [{include = "game_of_life"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.0"
pytest-watch = "^4.2.0"
pygame = "^2.1.2"

[tool.poetry.scripts]
game = "main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
